--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -15,6 +15,15 @@ $assertive:                       #ef473a !default;
 $royal:                           #886aea !default;
 $dark:                            #444 !default;
 */
+@font-face {
+  font-family: "Lato";
+  src: url("../fonts/Lato-Regular.ttf") format("truetype");
+  font-weight: normal; }
+
+/*$bar-title-font-size:             17px !default;
+$bar-padding-portrait:            5px !default;
+$bar-padding-landscape:           5px !default;
+$bar-transparency:                1 !default;*/
 /*!
   Ionicons, v2.0.1
   Created by Ben Sperry for the Ionic Framework, http://ionicons.com/
@@ -3339,7 +3348,7 @@ body,
   word-wrap: break-word;
   font-size: 14px;
   font-family: -apple-system;
-  font-family: "-apple-system", "Helvetica Neue", "Roboto", "Segoe UI", sans-serif;
+  font-family: "Lato", "Roboto", sans-serif;
   line-height: 20px;
   text-rendering: optimizeLegibility;
   -webkit-backface-visibility: hidden;
@@ -3509,25 +3518,25 @@ ion-infinite-scroll {
 
 /* If you change these, change platform.scss as well */
 .has-header {
-  top: 44px; }
+  top: 54px; }
 
 .no-header {
   top: 0; }
 
 .has-subheader {
-  top: 88px; }
+  top: 108px; }
 
 .has-tabs-top {
-  top: 93px; }
+  top: 103px; }
 
 .has-header.has-subheader.has-tabs-top {
-  top: 137px; }
+  top: 157px; }
 
 .has-footer {
-  bottom: 44px; }
+  bottom: 54px; }
 
 .has-subfooter {
-  bottom: 88px; }
+  bottom: 108px; }
 
 .has-tabs,
 .bar-footer.has-tabs {
@@ -3538,10 +3547,10 @@ ion-infinite-scroll {
     height: auto; }
 
 .bar-subfooter.has-tabs {
-  bottom: 93px; }
+  bottom: 103px; }
 
 .has-footer.has-tabs {
-  bottom: 93px; }
+  bottom: 103px; }
 
 .pane {
   -webkit-transform: translate3d(0, 0, 0);
@@ -3597,7 +3606,7 @@ h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   color: #000;
   font-weight: 500;
-  font-family: "-apple-system", "Helvetica Neue", "Roboto", "Segoe UI", sans-serif;
+  font-family: "Lato", "Roboto", sans-serif;
   line-height: 1.2; }
   h1 small, h2 small, h3 small, h4 small, h5 small, h6 small,
   .h1 small, .h2 small, .h3 small, .h4 small, .h5 small, .h6 small {
@@ -3887,7 +3896,7 @@ a.subdued {
   box-sizing: border-box;
   padding: 5px;
   width: 100%;
-  height: 44px;
+  height: 54px;
   border-width: 0;
   border-style: solid;
   border-top: 1px solid transparent;
@@ -4009,13 +4018,13 @@ a.subdued {
     overflow: hidden;
     margin: 0 10px;
     min-width: 30px;
-    height: 43px;
+    height: 53px;
     text-align: center;
     text-overflow: ellipsis;
     white-space: nowrap;
     font-size: 17px;
     font-weight: 500;
-    line-height: 44px; }
+    line-height: 54px; }
     .bar .title.title-left {
       text-align: left; }
     .bar .title.title-right {
@@ -4096,7 +4105,7 @@ a.subdued {
 
 .platform-android .bar .title {
   font-size: 19px;
-  line-height: 44px; }
+  line-height: 54px; }
 
 .bar-light .button {
   border-color: transparent;
@@ -4286,7 +4295,7 @@ a.subdued {
   border-top-width: 1px;
   border-bottom-width: 0;
   background-position: top;
-  height: 44px; }
+  height: 54px; }
   .bar-footer.item-input-inset {
     position: absolute; }
 
@@ -4294,14 +4303,14 @@ a.subdued {
   padding: 0; }
 
 .bar-subheader {
-  top: 44px;
+  top: 54px;
   display: block;
-  height: 44px; }
+  height: 54px; }
 
 .bar-subfooter {
-  bottom: 44px;
+  bottom: 54px;
   display: block;
-  height: 44px; }
+  height: 54px; }
 
 .nav-bar-block {
   position: absolute;
@@ -5038,7 +5047,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
 /* If you change this, change platform.scss as well */
 .tabs-top > .tabs,
 .tabs.tabs-top {
-  top: 44px;
+  top: 54px;
   padding-top: 0;
   background-position: bottom;
   border-top-width: 0;
@@ -5070,7 +5079,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
   white-space: nowrap;
   font-weight: 400;
   font-size: 14px;
-  font-family: "-apple-system", "Helvetica Neue", "Roboto", "Segoe UI", sans-serif;
+  font-family: "Lato", "Roboto", sans-serif;
   opacity: 0.7; }
   .tab-item:hover {
     cursor: pointer; }
@@ -5307,21 +5316,21 @@ ion-tabs.tabs-color-active-dark .tab-item {
   .modal.ng-leave-active {
     bottom: 0; }
   .platform-ios.platform-cordova .modal-wrapper .modal .bar-header:not(.bar-subheader) {
-    height: 44px; }
+    height: 54px; }
     .platform-ios.platform-cordova .modal-wrapper .modal .bar-header:not(.bar-subheader) > * {
       margin-top: 0; }
   .platform-ios.platform-cordova .modal-wrapper .modal .tabs-top > .tabs,
   .platform-ios.platform-cordova .modal-wrapper .modal .tabs.tabs-top {
-    top: 44px; }
+    top: 54px; }
   .platform-ios.platform-cordova .modal-wrapper .modal .has-header,
   .platform-ios.platform-cordova .modal-wrapper .modal .bar-subheader {
-    top: 44px; }
+    top: 54px; }
   .platform-ios.platform-cordova .modal-wrapper .modal .has-subheader {
-    top: 88px; }
+    top: 108px; }
   .platform-ios.platform-cordova .modal-wrapper .modal .has-header.has-tabs-top {
-    top: 93px; }
+    top: 103px; }
   .platform-ios.platform-cordova .modal-wrapper .modal .has-header.has-subheader.has-tabs-top {
-    top: 137px; }
+    top: 157px; }
   .modal-backdrop-bg {
     -webkit-transition: opacity 300ms ease-in-out;
     transition: opacity 300ms ease-in-out;
@@ -7494,7 +7503,7 @@ input,
 button,
 select,
 textarea {
-  font-family: "-apple-system", "Helvetica Neue", "Roboto", "Segoe UI", sans-serif; }
+  font-family: "Lato", "Roboto", sans-serif; }
 
 .item-input {
   display: -webkit-box;
@@ -9515,7 +9524,7 @@ a.button {
  * Platform specific tweaks
  */
 .platform-ios.platform-cordova:not(.fullscreen) .bar-header:not(.bar-subheader) {
-  height: 64px; }
+  height: 74px; }
   .platform-ios.platform-cordova:not(.fullscreen) .bar-header:not(.bar-subheader).item-input-inset .item-input-wrapper {
     margin-top: 19px !important; }
   .platform-ios.platform-cordova:not(.fullscreen) .bar-header:not(.bar-subheader) > * {
@@ -9523,23 +9532,23 @@ a.button {
 
 .platform-ios.platform-cordova:not(.fullscreen) .tabs-top > .tabs,
 .platform-ios.platform-cordova:not(.fullscreen) .tabs.tabs-top {
-  top: 64px; }
+  top: 74px; }
 
 .platform-ios.platform-cordova:not(.fullscreen) .has-header,
 .platform-ios.platform-cordova:not(.fullscreen) .bar-subheader {
-  top: 64px; }
+  top: 74px; }
 
 .platform-ios.platform-cordova:not(.fullscreen) .has-subheader {
-  top: 108px; }
+  top: 128px; }
 
 .platform-ios.platform-cordova:not(.fullscreen) .has-header.has-tabs-top {
-  top: 113px; }
+  top: 123px; }
 
 .platform-ios.platform-cordova:not(.fullscreen) .has-header.has-subheader.has-tabs-top {
-  top: 157px; }
+  top: 177px; }
 
 .platform-ios.platform-cordova .popover .bar-header:not(.bar-subheader) {
-  height: 44px; }
+  height: 54px; }
   .platform-ios.platform-cordova .popover .bar-header:not(.bar-subheader).item-input-inset .item-input-wrapper {
     margin-top: -1px; }
   .platform-ios.platform-cordova .popover .bar-header:not(.bar-subheader) > * {
@@ -9547,10 +9556,10 @@ a.button {
 
 .platform-ios.platform-cordova .popover .has-header,
 .platform-ios.platform-cordova .popover .bar-subheader {
-  top: 44px; }
+  top: 54px; }
 
 .platform-ios.platform-cordova .popover .has-subheader {
-  top: 88px; }
+  top: 108px; }
 
 .platform-ios.platform-cordova.status-bar-hide {
   margin-bottom: 20px; }
@@ -9731,75 +9740,222 @@ a.button {
   -webkit-transition-duration: 0s;
   transition-duration: 0s; }
 
+.bar-clear {
+  background-image: url(../img/bar_clear.png) !important; }
+
 .content-default {
   background-color: #f7f7f7; }
 
-.profile-cover {
-  height: 140px;
-  text-align: center;
-  background-size: cover;
-  background-position: center center; }
+/*PERFIL*/
+.perfil-container {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-direction: normal;
+  -webkit-box-orient: vertical;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-align-content: strech;
+  -moz-align-content: strech;
+  -ms-flex-line-pack: strech;
+  align-content: strech;
+  height: 100%; }
 
-.profile-avatar {
+.perfil-cover {
+  height: 140px;
+  width: 100%;
+  background-color: #03A9F4;
+  background-size: cover;
+  background-position: center center;
+  background-image: url(../img/profile_cover.jpg); }
+
+.perfil-map-container {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -moz-box-flex: 1;
+  -moz-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  background-position: center center;
+  background-size: cover; }
+
+.perfil-title-container {
+  background-color: #FFF;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-direction: normal;
+  -webkit-box-orient: horizontal;
+  -webkit-flex-direction: row;
+  -moz-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  -webkit-justify-content: space-between;
+  -moz-justify-content: space-between;
+  justify-content: space-between;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  -webkit-align-items: flex-start;
+  -moz-align-items: flex-start;
+  align-items: flex-start;
+  -webkit-align-content: strech;
+  -moz-align-content: strech;
+  -ms-flex-line-pack: strech;
+  align-content: strech; }
+
+.perfil-bio-container, .perfil-labels-container, .perfil-address-container, .perfil-name-container {
+  background-color: #FFF; }
+
+.perfil-title-col-avatar {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -moz-box-flex: 1;
+  -moz-flex: 1;
+  -ms-flex: 1;
+  flex: 1; }
+
+.perfil-title-col {
+  height: 100%; }
+
+.perfil-container-border-bottom {
+  border-bottom: 1px solid #EEE; }
+
+.perfil-container-border-top {
+  border-top: 1px solid #EEE; }
+
+.perfil-container-margin-bottom {
+  margin-bottom: 15px; }
+
+.perfil-name-container {
+  font-weight: bold;
+  font-size: 22px; }
+
+.perfil-avatar {
   border: 3px solid #FFF;
-  margin-top: -50px;
+  margin-top: -40px;
   height: 100px;
   width: 100px;
-  border-radius: 10px; }
+  border-radius: 10px;
+  background-size: cover;
+  background-position: top center; }
 
-.profile-title {
-  color: #1a1a1a;
-  font-size: 22px;
-  font-weight: bold; }
+.perfil-address-container {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-direction: normal;
+  -webkit-box-orient: horizontal;
+  -webkit-flex-direction: row;
+  -moz-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  -webkit-justify-content: space-between;
+  -moz-justify-content: space-between;
+  justify-content: space-between;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  -webkit-align-items: flex-start;
+  -moz-align-items: flex-start;
+  align-items: flex-start;
+  -webkit-align-content: strech;
+  -moz-align-content: strech;
+  -ms-flex-line-pack: strech;
+  align-content: strech; }
 
-.profile-labels {
-  margin: 5px 0; }
+.perfil-address-col {
+  height: 100%; }
 
-.profile-col-heart-btn {
-  /*margin-top: -35px;*/ }
-
-.profile-heart-btn {
-  /*$size: 50px;
-	height: $size!important;
-	width: $size!important;
-	border-radius: $size;*/ }
-
-.profile-card {
-  background-color: #FFF;
-  border-top-width: 1px;
-  border-bottom-width: 1px;
-  border-top-style: solid;
-  border-bottom-style: solid;
-  border-color: #EEE;
-  margin: 10px 0;
-  padding: 0 5px; }
-
-.profile-card-no-top {
-  border-top: none !important;
-  margin-top: 0 !important; }
-
-.profile-card, .profile-card-title {
-  /*color: darken($mainColor, 30%)!important;*/
-  color: #333333 !important; }
-
-.profile-card-title {
-  font-size: 20px;
+.perfil-address-title {
+  font-weight: bold;
+  font-size: 18px;
   margin-bottom: 5px; }
 
-.profile-card-footer {
-  /*text-align: center;*/ }
+.perfil-address-col-text {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -moz-box-flex: 1;
+  -moz-flex: 1;
+  -ms-flex: 1;
+  flex: 1; }
 
+.btn-address {
+  margin-top: -20px; }
+
+.btn-circle {
+  border-radius: 100% !important; }
+
+/*
+.profile-cover {
+	height: 120px;
+	text-align: center;
+	background-size: cover;
+	background-position: center center;
+}
+.profile-title {
+	color: lighten(#000, 10%);
+	font-size: 22px;
+	font-weight: bold;
+	margin-top: -15px;
+}
+.profile-labels {
+	margin: 0px 0;
+	margin-bottom: 5px;
+}
+.profile-col-heart-btn{
+}
+.profile-heart-btn{
+}
+.profile-card {
+	background-color: #FFF;
+	border-top-width: 1px;
+	border-bottom-width: 1px;
+	border-top-style: solid;
+	border-bottom-style: solid;
+	border-color: $borderColor;
+	margin: 10px 0;
+
+	padding: 5px 5px;
+}
+.profile-card-no-top{
+	border-top: none!important;
+	margin-top: 0!important;
+}
+.profile-card, .profile-card-title{
+	color: lighten(#000, 20%)!important;
+}
+.profile-card-title {
+	font-size: 20px;
+	margin-bottom: 5px;
+}
+.profile-card-footer{
+}
 .profile-card-action-btn {
-  background-color: #01405d !important;
-  color: #FFF !important;
-  border-radius: 100%; }
-
+	background-color: darken($mainColor, 30%)!important;
+	color: #FFF!important;
+	border-radius: 100%;
+}*/
 .label {
-  padding: 5px 10px;
+  padding: 2px 10px;
   font-size: 11px;
   margin-right: 5px;
-  border-radius: 4px; }
+  border-radius: 4px;
+  display: inline-block; }
 
 .label-default {
   background-color: #EEE;
   color: black; }
+
+.bar .title {
+  font-weight: bold; }
