--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -6,7 +6,12 @@
         </ion-nav-buttons> -->
 
     <ion-content has-bouncing="false">
-        <button class="button button-positive button-block">Entrar com Facebook</button>
+        <button
+        	type="button"
+        	class="button button-positive button-block"
+        	ng-click="doLogin()">
+        	Entrar com Facebook
+        </button>
         <div class="text-center">Política de privacidade</div>
     </ion-content>
 </ion-view>
