--- a/www/templates/perfil2.html
+++ b/www/templates/perfil2.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Katy Perry">
+<ion-view view-title="{{dentista.name}}">
       <!-- <ion-nav-bar class="bar-clear">
             <ion-nav-back-button>
             </ion-nav-back-button>
